# goit-pythonweb-hw-12

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  pytest_output.txt  requirements-dev.txt  requirements.txt
app/: main.py
app/auth/: auth.py  auth_service.py
app/conf/: config.py
app/database/: db.py
app/models/: models.py
app/repository/: users.py
app/routes/: auth.py  contacts.py  users.py
app/schemas/: schemas.py
app/services/: auth.py  cloudinary_service.py  email.py
docs/: api_auth.rst  api_contacts.rst  api_users.rst  conf.py  index.rst  modules.rst
docs/source/: app.conf.rst  app.database.rst  app.models.rst  app.repository.rst  app.routes.rst  app.rst  app.schemas.rst  app.services.rst  conf.py  index.rst
tests/: conftest.py  test_auth_routes.py  test_cloudinary_service.py  test_contacts.py  test_db.py  test_email_service.py  test_get_contact_by_id.py  test_integration_auth.py  test_integration_contacts.py  test_main.py  test_read_contacts_list.py  test_repository_users.py  test_repository_users_extra.py  test_user.py
